青少年版本修改

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "茄子直播",
-  "name": "茄子直播",
+  "short_name": "全国青少年校园足球赛事后台管理",
+  "name": "全国青少年校园足球赛事后台管理",
   "theme_color": "#313653",
   "background_color": "#313653",
   "start_url": ".",
