--- a/nginx.conf
+++ b/nginx.conf
@@ -61,7 +61,7 @@ http {
 
 	#if ($request_uri ~* "^/$"){
 	   location =/{
-	       rewrite ^/(.*)$ https://www.qiezizhibo-api.com/manage/login permanent;
+	       rewrite ^/(.*)$ https://www.xiaoyuanzuqiu.live/manage/login permanent;
 	   }
         error_page 404 /404.html;
             location = /40x.html {
@@ -98,7 +98,7 @@ http {
             expires -1;
         }
     location =/{
-             rewrite ^/(.*)$ https://www.qiezizhibo-api.com/manage/login permanent;
+             rewrite ^/(.*)$ https://www.xiaoyuanzuqiu.live/manage/login permanent;
         }
         error_page 404 /404.html;
             location = /40x.html {
