--- a/nginx.conf
+++ b/nginx.conf
@@ -49,7 +49,7 @@ http {
 
         location ^~ /manage {
             index index.html;
-            try_files $uri /manage/index.html;
+            try_files $uri $uri/ /manage/index.html;
             proxy_set_header   Host             $host;
             proxy_set_header   X-Real-IP        $remote_addr;
             proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
@@ -88,7 +88,7 @@ http {
 
     location ^~ /manage {
             index index.html;
-            try_files $uri /manage/index.html;
+            try_files $uri $uri/ /manage/index.html;
             proxy_set_header   Host             $host;
             proxy_set_header   X-Real-IP        $remote_addr;
             proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
