--- a/nginx.conf
+++ b/nginx.conf
@@ -73,40 +73,40 @@ http {
     }
     # Settings for a TLS enabled server.
 
-    server {
-        listen       443 ssl http2 default_server;
-        listen       [::]:443 ssl http2 default_server;
-        server_name  localhost;
-        root         /usr/share/nginx/html;
+    #server {
+    #    listen       443 ssl http2 default_server;
+    #    listen       [::]:443 ssl http2 default_server;
+    #    server_name  localhost;
+    #    root         /usr/share/nginx/html;
 
-        ssl_certificate "/data/ssl/tls.crt";
-        ssl_certificate_key "/data/ssl/tls.key";
-        ssl_session_cache shared:SSL:1m;
-        ssl_session_timeout  10m;
-        ssl_ciphers HIGH:!aNULL:!MD5;
-        ssl_prefer_server_ciphers on;
+    #    ssl_certificate "/data/ssl/tls.crt";
+    #    ssl_certificate_key "/data/ssl/tls.key";
+    #    ssl_session_cache shared:SSL:1m;
+    #    ssl_session_timeout  10m;
+    #    ssl_ciphers HIGH:!aNULL:!MD5;
+    #    ssl_prefer_server_ciphers on;
 
-    location ^~ /manage {
-            index index.html;
-            try_files $uri $uri/ /manage/index.html;
-            proxy_set_header   Host             $host;
-            proxy_set_header   X-Real-IP        $remote_addr;
-            proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
-            proxy_set_header   X-Forwarded-Proto  $scheme;
-            gzip on;
-            gzip_types application/javascript text/css image/jpeg image/png;
-            expires -1;
-        }
-    location =/{
-             rewrite ^/(.*)$ https://www.xiaoyuanzuqiu.live/manage/login permanent;
-        }
-        error_page 404 /404.html;
-            location = /40x.html {
-        }
+    #location ^~ /manage {
+    #        index index.html;
+    #        try_files $uri $uri/ /manage/index.html;
+    #        proxy_set_header   Host             $host;
+    #        proxy_set_header   X-Real-IP        $remote_addr;
+    #        proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+    #        proxy_set_header   X-Forwarded-Proto  $scheme;
+    #        gzip on;
+    #        gzip_types application/javascript text/css image/jpeg image/png;
+    #        expires -1;
+    #    }
+    #location =/{
+    #         rewrite ^/(.*)$ https://www.xiaoyuanzuqiu.live/manage/login permanent;
+    #    }
+    #    error_page 404 /404.html;
+    #        location = /40x.html {
+    #    }
 
-        error_page 500 502 503 504 /50x.html;
-            location = /50x.html {
-        }
-    }
+    #    error_page 500 502 503 504 /50x.html;
+    #        location = /50x.html {
+    #    }
+    #}
 }
 
