--- a/package.json
+++ b/package.json
@@ -86,7 +86,8 @@
     "webpack": "4.40.2",
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.0.4",
-    "workbox-webpack-plugin": "4.3.1"
+    "workbox-webpack-plugin": "4.3.1",
+    "url-pattern": "1.0.3"
   },
   "devDependencies": {
     "react-hot-loader": "^4.12.18",
