--- a/package.json
+++ b/package.json
@@ -87,7 +87,8 @@
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.0.4",
     "workbox-webpack-plugin": "4.3.1",
-    "url-pattern": "1.0.3"
+    "url-pattern": "1.0.3",
+    "number-precision": "1.5.0"
   },
   "devDependencies": {
     "react-hot-loader": "^4.12.18",
