--- a/package.json
+++ b/package.json
@@ -88,7 +88,8 @@
     "webpack-manifest-plugin": "2.0.4",
     "workbox-webpack-plugin": "4.3.1",
     "url-pattern": "1.0.3",
-    "number-precision": "1.5.0"
+    "number-precision": "1.5.0",
+    "js-base64": "3.6.0"
   },
   "devDependencies": {
     "react-hot-loader": "^4.12.18",
