--- a/package.json
+++ b/package.json
@@ -80,13 +80,13 @@
     "terser-webpack-plugin": "1.4.1",
     "ts-pnp": "1.1.4",
     "url-loader": "2.1.0",
-    "video.js": "7.17.0",
+    "video.js": "7.18.1",
     "videojs-contrib-hls": "5.15.0",
     "videojs-flash": "2.2.1",
     "webpack": "4.40.2",
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.0.4",
-    "workbox-webpack-plugin": "4.3.1",
+    "workbox-webpack-plugin": "4.3d.1",
     "url-pattern": "1.0.3",
     "number-precision": "1.5.0",
     "js-base64": "3.6.0"
