--- a/nginx.conf
+++ b/nginx.conf
@@ -59,7 +59,6 @@ http {
             expires -1;
         }
 
-	#if ($request_uri ~* "^/$"){
 	   location =/{
 	       rewrite ^/(.*)$ https://manage.qiezizhibo.com/manage/login permanent;
 	   }
@@ -71,42 +70,42 @@ http {
             location = /50x.html {
         }
     }
-    # Settings for a TLS enabled server.
+    server {
+        listen       443 ssl default_server;
+        listen       [::]:443 ssl default_server;
+        server_name  localhost;
+        root         /usr/share/nginx/html;
 
-    #server {
-    #    listen       443 ssl http2 default_server;
-    #    listen       [::]:443 ssl http2 default_server;
-    #    server_name  localhost;
-    #    root         /usr/share/nginx/html;
+        ssl_certificate "/etc/nginx/tls.crt";
+        ssl_certificate_key "/etc/nginx/tls.key";
+        ssl_session_cache shared:SSL:1m;
+        ssl_session_timeout  10m;
+        ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+        ssl_prefer_server_ciphers on;
 
-    #    ssl_certificate "/data/ssl/tls.crt";
-    #    ssl_certificate_key "/data/ssl/tls.key";
-    #    ssl_session_cache shared:SSL:1m;
-    #    ssl_session_timeout  10m;
-    #    ssl_ciphers HIGH:!aNULL:!MD5;
-    #    ssl_prefer_server_ciphers on;
+        location ^~ /manage {
+            index index.html;
+            try_files $uri $uri/ /manage/index.html;
+            proxy_set_header   Host             $host;
+            proxy_set_header   X-Real-IP        $remote_addr;
+            proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Proto  $scheme;
+            gzip on;
+            gzip_types application/javascript text/css image/jpeg image/png;
+            expires -1;
+        }
 
-    #location ^~ /manage {
-    #        index index.html;
-    #        try_files $uri $uri/ /manage/index.html;
-    #        proxy_set_header   Host             $host;
-    #        proxy_set_header   X-Real-IP        $remote_addr;
-    #        proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
-    #        proxy_set_header   X-Forwarded-Proto  $scheme;
-    #        gzip on;
-    #        gzip_types application/javascript text/css image/jpeg image/png;
-    #        expires -1;
-    #    }
-    #location =/{
-    #         rewrite ^/(.*)$ https://www.qiezizhibo-api.com/manage/login permanent;
-    #    }
-    #    error_page 404 /404.html;
-    #        location = /40x.html {
-    #    }
+	   location =/{
+	       rewrite ^/(.*)$ https://manage.qiezizhibo.com/manage/login permanent;
+	   }
+        error_page 404 /404.html;
+            location = /40x.html {
+        }
 
-    #    error_page 500 502 503 504 /50x.html;
-    #        location = /50x.html {
-    #    }
-    #}
+        error_page 500 502 503 504 /50x.html;
+            location = /50x.html {
+        }
+    }
 }
 
