--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 #user root;
 worker_processes auto;
-error_log /var/log/nginx/error.log;
+error_log /var/log/nginx/error_football_manage.log;
 #pid /run/nginx.pid;
 
 events {
@@ -42,47 +42,10 @@ http {
     default_type        application/octet-stream;
 
     server {
-        listen       80 default_server;
-        listen       [::]:80 default_server;
+        listen       8081 default_server;
+        listen       [::]:8081 default_server;
         server_name  localhost;
         root         /usr/share/nginx/html;
-
-        location ^~ /manage {
-            index index.html;
-            try_files $uri $uri/ /manage/index.html;
-            proxy_set_header   Host             $host;
-            proxy_set_header   X-Real-IP        $remote_addr;
-            proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
-            proxy_set_header   X-Forwarded-Proto  $scheme;
-            gzip on;
-            gzip_types application/javascript text/css image/jpeg image/png;
-            expires -1;
-        }
-
-	   location =/{
-	       rewrite ^/(.*)$ https://manage.qiezizhibo.com/manage/login permanent;
-	   }
-        error_page 404 /404.html;
-            location = /40x.html {
-        }
-
-        error_page 500 502 503 504 /50x.html;
-            location = /50x.html {
-        }
-    }
-    server {
-        listen       443 ssl default_server;
-        listen       [::]:443 ssl default_server;
-        server_name  localhost;
-        root         /usr/share/nginx/html;
-
-        ssl_certificate "/etc/nginx/tls.crt";
-        ssl_certificate_key "/etc/nginx/tls.key";
-        ssl_session_cache shared:SSL:1m;
-        ssl_session_timeout  10m;
-        ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-        ssl_ciphers HIGH:!aNULL:!MD5;
-        ssl_prefer_server_ciphers on;
 
         location ^~ /manage {
             index index.html;
