--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "qiezizhibo-management-platform",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "homepage": "/manage/",
-  "private": true,
+  "private": false,
   "main": "index.js",
   "description": "qiezizhibo-management-platform",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/qq414831974/qiezizhibo-management-platform"
+  },
   "dependencies": {
     "@babel/core": "7.6.0",
     "@svgr/webpack": "4.3.2",
