--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "private": true,
   "main": "index.js",
   "description": "qiezizhibo-management-platform",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/qq414831974/qiezizhibo-management-platform"
+  },
   "dependencies": {
     "@babel/core": "7.6.0",
     "@svgr/webpack": "4.3.2",
